# biobloom-1

./: README.md  configure.ac
BioBloomCategorizer/: BioBloomClassifier.cpp  BioBloomClassifier.h  MultiFilter.cpp  MultiFilter.h  ResultsManager.h
BioBloomMaker/: BioBloomMaker.cpp  BloomFilterGenerator.cpp  BloomFilterGenerator.h  WindowedFileParser.cpp  WindowedFileParser.h
Common/: BloomFilter.cpp  Makefile.am  ReadsProcessor.cpp  ReadsProcessor.h  SeqEval.h
